# micropython

./: .gitignore  .gitmodules  BOARD_DEFINITION_BEST_PRACTICES.md  CONTRIBUTING.md  IMPLEMENTATION_COMPARISON.md  METACLASS_IMPLEMENTATION.md  OPEN_BOARD_PR_BEST_PRACTICES_ASSESSMENT.md  SKILL_COMPLETED.md  SLEEP_TEST_SUMMARY.md  TEST_COVERAGE_REPORT.md  justfile  pyproject.toml  report.md
.devcontainer/: Dockerfile  devcontainer.json  on_create.sh  on_start.sh  post_create.sh  setup_picker.py  welcome.txt
.github/: copilot-instructions.md  dependabot.yml
cmodules/: ulab
docs/: CODE_COVERAGE_ANALYSIS.md  (+5 more)
tools/mpremote/: .coverage  .gitignore  ASYNC_IMPLEMENTATION_STATUS.md  ASYNC_README.md  IMPLEMENTATION_SUMMARY.md  README.md  SIMPLIFICATION_PLAN.md  coverage.json  pyproject.toml  requirements.txt
tools/mpremote/mpremote/: async_compat.py  commands.py  commands_async.py  console.py  console_async.py  main.py  mip.py  protocol.py  pyboard.py  repl.py  repl_async.py  romfs.py  test_loc.py  transport.py  transport_async.py  transport_serial.py  transport_serial_async.py  verbose.py
tools/mpremote/plan/: ASYNC_MAIN_PLAN.md  ASYNC_REPORTS_AND_TESTS.md  ASYNC_USER_GUIDE.md
tools/mpremote/tests/: .gitignore  ASYNC_UPLOAD_PERFORMANCE_PLAN.md  COVERAGE.md  PYTEST_REFACTORING.md  README.md  README_ASYNC_TESTS.md  TEST_ASYNC_COMMANDS_COVERAGE.md  check_async_setup.py  conftest.py  coverage.xml  helpers.py  instructuins.md  loop.sh  pwsh_sed.ps1  requirements-test.txt  run-mpremote-tests.py  run-mpremote-tests.sh  run_async_tests.py  run_async_tests.sh  run_tests_with_coverage.py  test_async_commands.py  test_async_comprehensive.py  test_async_coverage.py  test_async_hardware.py  test_async_modules.py  test_async_transport.py  test_auto_chunk.py  test_auto_reconnect.sh  test_basic.sh  test_basic.sh.exp  test_benchmark_async.py  test_chunk_sizes.py  test_equals_sign.py  test_errno.py  test_errno.sh  test_esp8266_fragmented.py  test_esp8266_memory.py  test_esp8266_stress.py  test_eval_exec_run.py  test_eval_exec_run.sh  (+45 more)
tools/mpremote/tests/assets/romfs_source/: bar.py  foo.py
tools/mpremote/tests/benchmark/: test_benchmark_async.py  test_manual_chunk_comparison.py  test_upload_optimization.py
(+546 files in other folders)
